[package]
name = "bdsp_ug_generator_py_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bdsp_ug_generator_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
bdsp_ug_generator = { git = "https://github.com/SteveCookTU/bdsp_ug_generator.git", rev = "4a699ce"}